--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "sass": "^1.63.3",
     "vue": "^3.3.4"
   },
   "devDependencies": {
